objects/Contact/fields/Assists_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Assists_Per_Game__c</fullName>
    <description>Average number of assists per game.</description>
    <label>Assists Per Game</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>