objects/Contact/fields/Blocks__c.field-meta.xml
<CustomField>
    <fullName>Blocks__c</fullName>
    <description>Average Number of Blocks per game</description>
    <label>Blocks</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>