objects/Contact/fields/Field_Goal_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Field_Goal_Percentage__c</fullName>
    <description>Field goal percentage</description>
    <label>Field Goal Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>