objects/Contact/fields/Free_Throw_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Free_Throw_Percentage__c</fullName>
    <label>Free Throw Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>