objects/Contact/fields/Height_Feet__c.field-meta.xml
<CustomField>
    <fullName>Height_Feet__c</fullName>
    <description>The number of whole feet. For example if a player&apos;s height is 6&apos;8&quot;, this number will be 6.</description>
    <label>Height Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>