objects/Contact/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <description>The number of whole feet. For example if a player&apos;s height is 6&apos;8&quot;, this number will be 8.</description>
    <inlineHelpText>The number of whole feet. For example if a player&apos;s height is 6&apos;8&quot;, this number will be 8.</inlineHelpText>
    <label>Height Inches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>