objects/Contact/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <description>Player Id used to retrieve from API web service.</description>
    <label>Player ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>