objects/Contact/fields/Points_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Game__c</fullName>
    <description>Average points scored in a game for this player.</description>
    <label>Points Per Game</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>