objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>C = Center, PF = Power Forward, SF = Small Forward, SG = Shooting Guard, PG = Point Guard, G = Guard, F = Forward.</description>
    <inlineHelpText>C = Center, PF = Power Forward, SF = Small Forward, SG = Shooting Guard, PG = Point Guard, G = Guard, F = Forward.</inlineHelpText>
    <label>Position</label>
    <length>2</length>
    <type>Text</type>
</CustomField>