objects/Contact/fields/Rebounds_Per_Game__c.field-meta.xml
<CustomField>
    <fullName>Rebounds_Per_Game__c</fullName>
    <description>the average rebounds per game. Both defensive and offensive combined.</description>
    <label>Rebounds Per Game</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>