objects/Contact/fields/Steals__c.field-meta.xml
<CustomField>
    <fullName>Steals__c</fullName>
    <description>Average number of steals per game</description>
    <label>Steals</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>