objects/Contact/fields/Turnovers__c.field-meta.xml
<CustomField>
    <fullName>Turnovers__c</fullName>
    <description>Average number of turnovers per game.</description>
    <inlineHelpText>Average number of turnovers per game.</inlineHelpText>
    <label>Turnovers</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>