objects/Contact/fields/X3_Point_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X3_Point_Percentage__c</fullName>
    <label>3 Point Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>