objects/Contact/listViews/NBA_Players.listView-meta.xml
<ListView>
    <fullName>NBA_Players</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Height_Feet__c</columns>
    <columns>Height_Inches__c</columns>
    <columns>Position__c</columns>
    <columns>Weight__c</columns>
    <columns>Player_ID__c</columns>
    <columns>Points_Per_Game__c</columns>
    <columns>Field_Goal_Percentage__c</columns>
    <columns>X3_Point_Percentage__c</columns>
    <columns>Free_Throw_Percentage__c</columns>
    <columns>Rebounds_Per_Game__c</columns>
    <columns>Assists_Per_Game__c</columns>
    <columns>Steals__c</columns>
    <columns>Turnovers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/2/2020 12:00 AM</value>
    </filters>
    <label>NBA Players</label>
</ListView>